Add Data Context

--- a/Sales.API/appsettings.json
+++ b/Sales.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DockerConnection": "Data Source=.;Initial Catalog=Sales;User ID=sa;Password=2023;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
